--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <title>Cordoba Te Quiero - Sitio Oficial</title>
+  <meta name="description" content="Sitio oficial de la Alianza-CordobaTeQuiero, la nueva agrupación política de toda Córdoba.">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Alianza - Cordoba Te Quiero</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
