Actualizando index.html

--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
   <!-- Sección 1 -->
   <button class="acordeon">Presentan Alianza Transitoria - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="WhatsApp%20Image%202025-08-10%20at%2023.03.45.pdf" allowfullscreen></iframe>
+    <iframe src="WhatsAppImage2025-08-10at23.03.45.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- seccion 2-->
   <button class="acordeon">Acta Constitutiva - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="ACTA%20CONSTITUTIVA%20DE%20LA%20ALIANZA%20CORDOBA%20TE%20QUIERO.pdf" allowfullscreen></iframe>
+    <iframe src="ACTACONSTITUTIVADELAALIANZACORDOBATEQUIERO.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 3 -->
   <button class="acordeon">Reglamento Electoral - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="REGLAMENTO%20ELECTORAL%20ALIANZA%20CORDOBA%20TE%20QUIERO%20NUEVA%20(1).pdf" allowfullscreen></iframe>
+    <iframe src="REGLAMENTOELECTORALALIANZACORDOBATEQUIERONUEVA(1).pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 5 -->
   <button class="acordeon">Plataforma Electoral, Declaracion de Principios y Bases de Accion Politica</button>
   <div class="panel">
-    <iframe src="ANEXO%201%20PLATAFFROMA,%20DECLARACION%20PRINCIPIOS%20Y%20BASES%20DE%20ACCION%20DE%20ALIANZA.pdf" allowfullscreen></iframe>
+    <iframe src="ANEXO1PLATAFFROMA,DECLARACIONPRINCIPIOSYBASESDEACCIONDEALIANZA.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 6 -->
@@ -246,3 +246,4 @@
   <script src="scripts.js" defer></script>
 </body>
 </html>
+
