--- a/index.html
+++ b/index.html
@@ -54,31 +54,31 @@
   <!-- Sección 1 -->
   <button class="acordeon">Presentan Alianza Transitoria - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="WhatsApp%20Image%202025-08-10%20at%2023.03.45.pdf" allowfullscreen></iframe>
+    <iframe src="presentan_alianza_transitoria.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- seccion 2-->
   <button class="acordeon">Acta Constitutiva - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="ACTA%20CONSTITUTIVA%20DE%20LA%20ALIANZA%20CORDOBA%20TE%20QUIERO.pdf" allowfullscreen></iframe>
+    <iframe src="acta_constitutiva_de_la_alianza_cordoba_te_quiero.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 3 -->
   <button class="acordeon">Reglamento Electoral - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="REGLAMENTO%20ELECTORAL%20ALIANZA%20CORDOBA%20TE%20QUIERO%20NUEVA%20(1).pdf" allowfullscreen></iframe>
+    <iframe src="reglamento_electoral_alianza_cordoba_te_quiero.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 5 -->
   <button class="acordeon">Plataforma Electoral, Declaracion de Principios y Bases de Accion Politica</button>
   <div class="panel">
-    <iframe src="ANEXO%201%20PLATAFFROMA,%20DECLARACION%20PRINCIPIOS%20Y%20BASES%20DE%20ACCION%20DE%20ALIANZA.pdf" allowfullscreen></iframe>
+    <iframe src="plataforma_,_declaracion_principios_y_base_de_accion_de_alianza.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 6 -->
   <button class="acordeon">Junta Promotora - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="9392-25%20Cordoba%20Te%20quiero%20Presenta%20Doc%20y%20J.Electoral.pdf" allowfullscreen></iframe>
+    <iframe src="Junta_electoral.pdf" allowfullscreen></iframe>
   </div>
 
 
