--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
   <!-- Sección 5 -->
   <button class="acordeon">Plataforma Electoral, Declaracion de Principios y Bases de Accion Politica</button>
   <div class="panel">
-    <iframe src="plataforma_,_declaracion_principios_y_base_de_accion_de_alianza.pdf" allowfullscreen></iframe>
+    <iframe src="plataforma_declaracion_principios_y_base_de_accion_de_alianza.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 6 -->
   <button class="acordeon">Junta Promotora - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="Junta_electoral.pdf" allowfullscreen></iframe>
+    <iframe src="junta_electoral.pdf" allowfullscreen></iframe>
   </div>
 
 
@@ -246,3 +246,4 @@
   <script src="scripts.js" defer></script>
 </body>
 </html>
+
