--- a/index.html
+++ b/index.html
@@ -54,31 +54,31 @@
   <!-- Sección 1 -->
   <button class="acordeon">Presentan Alianza Transitoria - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="presentan_alianza_transitoria.pdf" allowfullscreen></iframe>
+    <iframe src="presentan_alianza.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- seccion 2-->
   <button class="acordeon">Acta Constitutiva - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="acta_constitutiva_de_la_alianza_cordoba_te_quiero.pdf" allowfullscreen></iframe>
+    <iframe src="acta_constitutiva_de_la_alianza.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 3 -->
   <button class="acordeon">Reglamento Electoral - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="reglamento_electoral_alianza_cordoba_te_quiero.pdf" allowfullscreen></iframe>
+    <iframe src="reglamento_electoral_alianza.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 5 -->
   <button class="acordeon">Plataforma Electoral, Declaracion de Principios y Bases de Accion Politica</button>
   <div class="panel">
-    <iframe src="plataforma_,_declaracion_principios_y_base_de_accion_de_alianza.pdf" allowfullscreen></iframe>
+    <iframe src="plataforma_declaracion_principios_base_de_accion_pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 6 -->
   <button class="acordeon">Junta Promotora - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="Junta_electoral.pdf" allowfullscreen></iframe>
+    <iframe src="junta_electoral_alianzal.pdf" allowfullscreen></iframe>
   </div>
 
 
