--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
 <script>
-  const acordeon = document.querySelectorAll(".acordeon");
+  const acordeones = document.querySelectorAll(".acordeon");
 
   acordeones.forEach((acordeon) => {
     const panel = acordeon.nextElementSibling; // El div .panel que sigue al botón
