--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
   <!-- Sección 5 -->
   <button class="acordeon">Plataforma Electoral, Declaracion de Principios y Bases de Accion Politica</button>
   <div class="panel">
-    <iframe src="plataforma_declaracion_principios_base_de_accion_pdf" allowfullscreen></iframe>
+    <iframe src="plataforma_declaracion_principios_base_de_accion_de_alianza.pdf" allowfullscreen></iframe>
   </div>
 
   <!-- Sección 6 -->
   <button class="acordeon">Junta Promotora - CORDOBA TE QUIERO</button>
   <div class="panel">
-    <iframe src="junta_electoral_alianzal.pdf" allowfullscreen></iframe>
+    <iframe src="junta_electora_alianzal.pdf" allowfullscreen></iframe>
   </div>
 
 
