--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Alianza - Cordoba Te Quiero</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/x-icon" href="cordoba_icon.png" />
 </head>
 <body>
   <!-- HEADER / NAV -->
@@ -79,6 +80,24 @@
   <button class="acordeon">Junta Promotora - CORDOBA TE QUIERO</button>
   <div class="panel">
     <iframe src="junta_electora_alianzal.pdf" allowfullscreen></iframe>
+  </div>
+
+  <!-- Sección 7 -->
+  <button class="acordeon">Retenciones Cero - Eje de Campaña</button>
+  <div class="panel">
+    <iframe src="retenciones_cero_eje_campaña.pdf" allowfullscreen></iframe>
+  </div>
+
+  <!-- Sección 8 -->
+   <button class="acordeon">Reforma Impositiva - PyME</button>
+  <div class="panel">
+    <iframe src="reforma_impositiva_pyme.pdf" allowfullscreen></iframe>
+  </div>
+
+  <!--  Sección 9 -->
+  <button class="acordeon">Plan Vivienda Unica - CORDOBA TE QUIERO</button>
+  <div class="panel">
+    <iframe src="plan_vivienda_unica.pdf" allowfullscreen></iframe>
   </div>
 
 
@@ -206,29 +225,32 @@
         <div class="datos-contacto">
           <p><strong>Dirección:</strong> Proximamente</p>
           <p><strong>Teléfono:</strong> Proximamente</p>
-          <p><strong>Email:</strong> Proximamente</p>
 
-          <!--<div class="redes-sociales" aria-label="Redes sociales">
-            <a href="#" aria-label="Facebook" class="icono-facebook" target="_blank" rel="noopener noreferrer" >
+          <div class="redes-sociales" aria-label="Redes sociales">
+            <a href="#" class="icono-facebook">
               <svg aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="#FFD700" xmlns="http://www.w3.org/2000/svg">
                 <path d="M22 12.073C22 6.477 17.523 2 12 2S2 6.477 2 12.073c0 4.991 3.657 9.128 8.438 9.88v-6.987h-2.54v-2.893h2.54v-2.207c0-2.507 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.462h-1.26c-1.243 0-1.63.772-1.63 1.562v1.877h2.773l-.443 2.893h-2.33v6.987C18.343 21.2 22 17.064 22 12.073z"/>
               </svg>
             </a>
-            <a href="#" aria-label="Twitter" class="icono-twitter" target="_blank" rel="noopener noreferrer" >
+            <a href="#" aria-label="Twitter" class="icono-twitter">
               <svg aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="#FFD700" xmlns="http://www.w3.org/2000/svg">
                 <path d="M23 3a10.9 10.9 0 0 1-3.14.86A4.48 4.48 0 0 0 22.4.36a9.11 9.11 0 0 1-2.88 1.1 4.52 4.52 0 0 0-7.7 4.12A12.85 12.85 0 0 1 1.64 2.16a4.51 4.51 0 0 0 1.4 6.04A4.48 4.48 0 0 1 .88 7.8v.06a4.51 4.51 0 0 0 3.62 4.42 4.52 4.52 0 0 1-2.04.07 4.52 4.52 0 0 0 4.21 3.12 9.06 9.06 0 0 1-5.6 1.93A9.2 9.2 0 0 1 0 18.3a12.78 12.78 0 0 0 6.92 2.03c8.3 0 12.85-6.87 12.85-12.82 0-.2 0-.42-.02-.62A9.27 9.27 0 0 0 23 3z"/>
               </svg>
             </a>
-            <a href="#" aria-label="Instagram" class="icono-instagram" target="_blank" rel="noopener noreferrer" >
+            <a href="#" aria-label="Instagram" class="icono-instagram" >
               <svg aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="#FFD700" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm8.5 1.5h-8.5a4.25 4.25 0 0 0-4.25 4.25v8.5a4.25 4.25 0 0 0 4.25 4.25h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5a4.25 4.25 0 0 0-4.25-4.25zm-4.25 3a5.75 5.75 0 1 1 0 11.5 5.75 5.75 0 0 1 0-11.5zm0 1.5a4.25 4.25 0 1 0 0 8.5 4.25 4.25 0 0 0 0-8.5zm5.5-.75a1.25 1.25 0 1 1-2.5 0 1.25 1.25 0 0 1 2.5 0z"/>
-                <a href="https://www.facebook.com/" target="_blank"></a>
+              </svg>
+            </a>
+            <a href="mailto:cordobatequiero2025@gmail.com" aria-label="Email" class="icono-mail">
+              <svg aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="#FFD700" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 2v.01L12 11 4 6.01V6h16zM4 18V8l8 5 8-5v10H4z"/>
               </svg>
             </a>
           </div>
         </div>
       </div>
-    </section> -->
+    </section> 
   </main>
 
   <!-- FOOTER -->
